# RAG_POC

./: .env.example  README.md  aml.db  data_explaination.md  main.py  pyproject.toml  report.md  requirements.txt  workflow.md
a2a/: __init__.py  client.py  registry.py  server.py  types.py
agents/host_agent/: __init__.py  card.json  graph.py  prompts.py  server.py
agents/market_agent/: __init__.py  card.json  graph.py  prompts.py  rag.py  server.py
agents/transaction_agent/: __init__.py  card.json  graph.py  prompts.py  server.py
cli/: chat.py
mock_data/: market_embeddings.npy  market_knowledge.jsonl  test_cases.json  transactions.json
scripts/: build_embeddings.py  generate_mock_data.py
storage/: schema.sql  task_store.py
tools/: market_search.py  pattern_detector.py  transaction_query.py
