[project]
name = "a2a-aml-poc"
version = "0.1.0"
description = "Anti-money laundering multi-agent collaboration POC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "numpy>=1.26.0",
  "rich>=13.7.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.2.0",
  "anthropic>=0.34.0"
]

[project.scripts]
a2a-aml = "main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["a2a*", "agents*", "storage*", "tools*", "cli*"]
